<resources>
    <string name="app_name">NailShop</string>
    <string name="text_loading">Loading</string>
    <string name="text_order">Order</string>
    <string name="title_nail_shop">Nail Shop</string>
    <string name="text_search_store">Search store</string>
    <string name="title_nail">Nail</string>
    <string name="title_top_manicurist">Top manicurist</string>
    <string name="text_nail_name">Nail</string>
    <string name="title_search">Search</string>
    <string name="text_color">Color</string>
    <string name="text_tag">Tag</string>
    <string name="text_card">Card</string>
    <string name="title_manicurist">Manicurist</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_hint_password">password</string>
    <string name="text_hint_repassword">re-password</string>
    <string name="text_mind_password">Nhớ mật khẩu</string>
    <string name="text_register">Đăng ký</string>
    <string name="text_hint_username">username</string>
    <string name="text_price">Price</string>
    <string name="text_morning">Sáng</string>
    <string name="text_8_add30">8:00–8:30</string>
    <string name="text_8_30_9">8:30–9:00</string>
    <string name="text_9_add30">9:00–9:30</string>
    <string name="text_9_30_10">9:30–10:00</string>
    <string name="text_10_add30">10:00–10:30</string>
    <string name="text_10_30_11">10:30–11:00</string>
    <string name="text_11_add30">11:00–11:30</string>
    <string name="text_afternoon">Chiều</string>
    <string name="text_12_30_13">12:30–13:00</string>
    <string name="text_13_add30">13:00–13:30</string>
    <string name="text_13_30_14">13:30–14:00</string>
    <string name="text_14_add30">14:00–14:30</string>
    <string name="text_14_30_15">14:30–15:00</string>
    <string name="text_15_add30">15:00–15:30</string>
    <string name="text_15_30_16">15:30–16:00</string>
    <string name="text_16_add30">16:00–16:30</string>
    <string name="text_16_30_17">16:30–17:00</string>
    <string name="text_17_add30">17:00–17:30</string>
    <string name="text_17_30_18">17:30–18:00</string>
    <string name="text_evening">Tối</string>
    <string name="text_19_30_20">19:30–20:00</string>
    <string name="text_20_add30">20:00–20:30</string>
    <string name="text_20_30_21">20:30–21:00</string>
    <string name="text_21_add30">21:00–21:30</string>
    <string name="text_21_30_22">21:30–22:00</string>
    <string name="text_22_add30">22:00–22:30</string>
    <string name="text_22_30_23">22:30–23:00</string>
    <string name="text_23_add30">23:00–23:30</string>
    <string name="text_choose">Choose</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_name">Name</string>
    <string name="text_phone">Phone</string>
    <string name="text_edit">Edit</string>
    <string name="text_log_out">Log out</string>
    <string name="text_gender">Gender</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_history">History</string>
</resources>
