<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_berry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Information"
        app:titleTextColor="@android:color/white" />

    <Button
        android:id="@+id/buttonFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/text_favorite"
        android:backgroundTint="@color/red_berry"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/buttonEdit"
        app:layout_constraintStart_toStartOf="@+id/buttonEdit"
        app:layout_constraintTop_toBottomOf="@+id/buttonEdit" />

    <TextView
        android:id="@+id/textManicuristName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/text_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMore" />

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/text_phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textManicuristName" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_24"
        android:autofillHints=""
        android:ems="10"
        android:enabled="false"
        android:hint="@null"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textManicuristName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textManicuristName"
        app:layout_constraintTop_toTopOf="@+id/textManicuristName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_24"
        android:autofillHints=""
        android:ellipsize="end"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textPhone"
        app:layout_constraintTop_toTopOf="@+id/textPhone"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/text_edit"
        android:backgroundTint="@color/red_berry"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/text_log_out"
        android:backgroundTint="@color/red_berry"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/buttonFavorite"
        app:layout_constraintStart_toStartOf="@+id/buttonFavorite"
        app:layout_constraintTop_toBottomOf="@+id/buttonFavorite" />

    <TextView
        android:id="@+id/textGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/text_gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textPhone"
        app:layout_constraintStart_toStartOf="@+id/textPhone"
        app:layout_constraintTop_toBottomOf="@+id/textPhone" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textGender"
        app:layout_constraintEnd_toEndOf="@+id/editPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/editPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/textGender">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:enabled="false"
            android:text="@string/text_male" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/text_female" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
