<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/viewHeader"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_110"
            android:background="@color/red_berry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textNailShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/chewy"
            android:text="@string/title_nail_shop"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textSearch"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_36"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/custom_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/text_search_store"
            android:padding="@dimen/dp_8"
            app:drawableStartCompat="@drawable/ic_search_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textNailShop"
            app:layout_constraintTop_toBottomOf="@+id/textNailShop" />

        <TextView
            android:id="@+id/textNail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/title_nail"
            android:textColor="@color/red_berry"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewHeader" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerNail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textNail"
            app:layout_constraintTop_toBottomOf="@+id/textNail"
            app:spanCount="2"
            tools:listitem="@layout/item_nail" />

        <TextView
            android:id="@+id/textTopManicurist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:drawablePadding="@dimen/dp_4"
            android:text="@string/title_top_manicurist"
            android:textColor="@color/red_berry"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/recyclerNail"
            app:layout_constraintTop_toBottomOf="@+id/recyclerNail"
            app:drawableStartCompat="@drawable/rank" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTopManicurist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/bg_ingredient"
            android:foregroundGravity="center"
            android:padding="@dimen/dp_2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTopManicurist"
            app:layout_constraintWidth_percent="0.95"
            app:spanCount="2"
            tools:listitem="@layout/item_top_manicurist" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
